--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "connect:db": "psql postgresql://local_user:local_password@localhost:5432/local_database",
+    "see:db": "npx prisma studio",
     "start:db": "sudo docker compose up -d",
     "build": "next build",
     "start": "next start",
