--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-config-next": "15.2.1",
     "prisma": "^6.10.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
