--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -47,7 +48,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.519.0",
     "next": "^15.3.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.6.5",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
