--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "prisma generate && next dev --turbopack",
     "connect:db": "psql postgresql://local_user:local_password@localhost:5432/local_database",
     "see:db": "npx prisma studio",
     "start:db": "sudo docker compose up -d",
@@ -12,7 +12,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -41,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -48,7 +48,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.519.0",
     "next": "^15.3.4",
-    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.6.5",
     "react": "^19.0.0",
